--- a/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
@@ -5,66 +5,22 @@
              Title="Profile"
              Style="{StaticResource TypicalContentPage}">
 
-  <StackLayout>
 
-    <!-- Button 1 -->
-    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
-                 x:Name="btn_n5">
-      <!--  <============== Edit the button x:name -->
-      <Image Style="{StaticResource CustomButtonImage}"
-             Source="n5_assessment_banner"/>
-      <!--  <============== Edit the source image -->
-      <Grid Style="{StaticResource CustomButtonGrid}">
-        <StackLayout>
-          <Frame Style="{StaticResource CustomButtonFrame}" />
-        </StackLayout>
-        <StackLayout>
-          <Label  Style="{StaticResource CustomButtonLabel}"
-                  Text="JLPT N5 Assessment"/>
-          <!--  <===== Edit the label -->
-        </StackLayout>
-      </Grid>
-    </StackLayout>
-
-    <!-- Button 2 -->
-    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
-                 x:Name="btn_n4">
-      <!--  <============== Edit the button x:name -->
-      <Image Style="{StaticResource CustomButtonImage}"
-             Source="n4_assessment_banner"/>
-      <!--  <============== Edit the source image -->
-      <Grid Style="{StaticResource CustomButtonGrid}">
-        <StackLayout>
-          <Frame Style="{StaticResource CustomButtonFrame}" />
-        </StackLayout>
-        <StackLayout>
-          <Label  Style="{StaticResource CustomButtonLabel}"
-                  Text="JLPT N4 Assessment"/>
-          <!--  <===== Edit the label -->
-        </StackLayout>
-      </Grid>
-    </StackLayout>
-
-    <!-- Button 3 -->
-    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
-                 x:Name="btn_delete_data">
-      <!--  <============== Edit the button x:name -->
-      <Image Style="{StaticResource CustomButtonImage}"
-             Source="delete_data_banner"/>
-      <!--  <============== Edit the source image -->
-      <Grid Style="{StaticResource CustomButtonGrid}">
-        <StackLayout>
-          <Frame Style="{StaticResource CustomButtonFrame}" />
-        </StackLayout>
-        <StackLayout>
-          <Label  Style="{StaticResource CustomButtonLabel}"
-                  Text="Delete User Data"/>
-          <!--  <===== Edit the label -->
-        </StackLayout>
-      </Grid>
-    </StackLayout>
-
-    <StackLayout >
+  <Grid>
+    <Button x:Name="btn_n5"
+            AutomationId="auto_btn_n5"
+            Text="JLPT N5 Assessment"
+            Grid.Row="0"/>
+    <Button x:Name="btn_n4"
+            AutomationId="auto_btn_n4"
+            Text="JLPT N4 Assessment"
+            Grid.Row="1"/>
+    <Button x:Name="btn_delete_data"
+            AutomationId="auto_btn_delete_data"
+            Text="Delete User Data"
+            Grid.Row="2"/>
+    <StackLayout
+      Grid.Row="3">
 
       <ProgressBar x:Name="progress_deletion"
                    IsVisible="False"
@@ -76,9 +32,85 @@
              VerticalOptions="End"
              Grid.Row="6"/>
     </StackLayout>
+  </Grid>
+
+  <!-- Button 1 -
+     <StackLayout>
+    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
+                 x:Name="btn_n5">
+      <!-  <============== Edit the button x:name -
+      <Image Style="{StaticResource CustomButtonImage}"
+             Source="n5_assessment_banner"/>
+      <!-  <============== Edit the source image -
+      <Grid Style="{StaticResource CustomButtonGrid}">
+        <StackLayout>
+          <Frame Style="{StaticResource CustomButtonFrame}" />
+        </StackLayout>
+        <StackLayout>
+          <Label  Style="{StaticResource CustomButtonLabel}"
+                  Text="JLPT N5 Assessment"/>
+          <!-  <===== Edit the label -
+        </StackLayout>
+      </Grid>
+    </StackLayout>
+
+    <!- Button 2 -
+    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
+                 x:Name="btn_n4">
+      <!-  <============== Edit the button x:name -
+      <Image Style="{StaticResource CustomButtonImage}"
+             Source="n4_assessment_banner"/>
+      <!-  <============== Edit the source image -
+      <Grid Style="{StaticResource CustomButtonGrid}">
+        <StackLayout>
+          <Frame Style="{StaticResource CustomButtonFrame}" />
+        </StackLayout>
+        <StackLayout>
+          <Label  Style="{StaticResource CustomButtonLabel}"
+                  Text="JLPT N4 Assessment"/>
+          <!-  <===== Edit the label -
+        </StackLayout>
+      </Grid>
+    </StackLayout>
+
+    <!- Button 3 -
+    <StackLayout Style="{StaticResource CustomButtonStackLayout}"
+                 x:Name="btn_delete_data">
+      <!-  <============== Edit the button x:name -
+      <Image Style="{StaticResource CustomButtonImage}"
+             Source="delete_data_banner"/>
+      <!-  <============== Edit the source image -
+      <Grid Style="{StaticResource CustomButtonGrid}">
+        <StackLayout>
+          <Frame Style="{StaticResource CustomButtonFrame}" />
+        </StackLayout>
+        <StackLayout>
+          <Label  Style="{StaticResource CustomButtonLabel}"
+                  Text="Delete User Data"/>
+          <!-  <===== Edit the label -
+        </StackLayout>
+      </Grid>
+    </StackLayout>
+</StackLayout>
+
+  <StackLayout >
+
+      <ProgressBar x:Name="progress_deletion"
+                   IsVisible="False"
+                   Progress="0"/>
+      <Label x:Name="lbl_prog_percent"
+             IsVisible="False"
+             Text="{Binding Progress, StringFormat='{0:0.00}%', Source={x:Reference progress_deletion}}"
+             HorizontalOptions="Center"
+             VerticalOptions="End"
+             Grid.Row="6"/>
+    </StackLayout>
+    -->
 
 
 
 
-  </StackLayout>
+
+
+
 </ContentPage>
