--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/JLPTN5SelectorPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/JLPTN5SelectorPage.xaml
@@ -5,19 +5,36 @@
              Title="JLPT N5 Assesment"
              Style="{StaticResource TypicalContentPage}">
 
+  <Grid>
+    <Button x:Name="btn_hiragana_achivements"
+            AutomationId="auto_btn_hiragana_achivements"
+            Text="Hiragana Achievement"
+            Grid.Row="0"/>
+    <Button x:Name="btn_katakana_achivements"
+                   AutomationId="auto_btn_katakana_achivements"
+            Text="Katakana Achievement"
+            Grid.Row="1"/>
+    <Button x:Name="btn_vocabulary_achivements"
+            AutomationId="auto_btn_vocabulary_achivements"
+            Text="Vocabulary Achievement"
+            Grid.Row="2"/>
+    <Button x:Name="btn_assess"
+            AutomationId="auto_btn_assess"
+            Text="Overall Assessment"
+            Grid.Row="3"/>
+  </Grid>
+  <!--
   <ScrollView>
 
 
     <StackLayout>
 
-      <!-- Button 1 -->
+      <!- Button 1 -
       <StackLayout Style="{StaticResource CustomButtonStackLayout}"
                    x:Name="btn_hiragana_achivements"
                    AutomationId="auto_btn_hiragana_achivements">
-        <!--  <============== Edit the button x:name -->
         <Image Style="{StaticResource CustomButtonImage}"
                Source="homepage_header2"/>
-        <!--  <============== Edit the source image -->
         <Grid Style="{StaticResource CustomButtonGrid}">
           <StackLayout>
             <Frame Style="{StaticResource CustomButtonFrame}" />
@@ -25,19 +42,16 @@
           <StackLayout>
             <Label  Style="{StaticResource CustomButtonLabel}"
                     Text="Hiragana Achivements"/>
-            <!--  <===== Edit the label -->
           </StackLayout>
         </Grid>
       </StackLayout>
 
-      <!-- Button 1 -->
+      <!- Button 1 -
       <StackLayout Style="{StaticResource CustomButtonStackLayout}"
                    x:Name="btn_katakana_achivements"
                    AutomationId="auto_btn_katakana_achivements">
-        <!--  <============== Edit the button x:name -->
         <Image Style="{StaticResource CustomButtonImage}"
                Source="homepage_header2"/>
-        <!--  <============== Edit the source image -->
         <Grid Style="{StaticResource CustomButtonGrid}">
           <StackLayout>
             <Frame Style="{StaticResource CustomButtonFrame}" />
@@ -45,19 +59,19 @@
           <StackLayout>
             <Label  Style="{StaticResource CustomButtonLabel}"
                     Text="Katakana Achievements"/>
-            <!--  <===== Edit the label -->
+            <!-  <===== Edit the label -
           </StackLayout>
         </Grid>
       </StackLayout>
 
-      <!-- Button 1 -->
+      <!- Button 1 -
       <StackLayout Style="{StaticResource CustomButtonStackLayout}"
                    x:Name="btn_vocabulary_achivements"
                    AutomationId="auto_btn_vocabulary_achivements">
-        <!--  <============== Edit the button x:name -->
+        <!-  <============== Edit the button x:name -
         <Image Style="{StaticResource CustomButtonImage}"
                Source="homepage_header2"/>
-        <!--  <============== Edit the source image -->
+        <!-  <============== Edit the source image -
         <Grid Style="{StaticResource CustomButtonGrid}">
           <StackLayout>
             <Frame Style="{StaticResource CustomButtonFrame}" />
@@ -65,19 +79,19 @@
           <StackLayout>
             <Label  Style="{StaticResource CustomButtonLabel}"
                     Text="Vocabulary Achievements"/>
-            <!--  <===== Edit the label -->
+            <!-  <===== Edit the label -
           </StackLayout>
         </Grid>
       </StackLayout>
 
-      <!-- Button 1 -->
+      <!- Button 1 -
       <StackLayout Style="{StaticResource CustomButtonStackLayout}"
                    x:Name="btn_assess"
                    AutomationId="auto_btn_assess">
-        <!--  <============== Edit the button x:name -->
+        <!-  <============== Edit the button x:name -
         <Image Style="{StaticResource CustomButtonImage}"
                Source="homepage_header2"/>
-        <!--  <============== Edit the source image -->
+        <!-  <============== Edit the source image -
         <Grid Style="{StaticResource CustomButtonGrid}">
           <StackLayout>
             <Frame Style="{StaticResource CustomButtonFrame}" />
@@ -85,11 +99,13 @@
           <StackLayout>
             <Label  Style="{StaticResource CustomButtonLabel}"
                     Text="View Assessment"/>
-            <!--  <===== Edit the label -->
+            <!-  <===== Edit the label -
           </StackLayout>
         </Grid>
       </StackLayout>
-
+  </StackLayout>
+  </ScrollView>
+  -->
       <!--
     <Grid>
       <Grid.ColumnDefinitions>
@@ -118,6 +134,5 @@
 
 
 
-    </StackLayout>
-  </ScrollView>
+    
 </ContentPage>
