added lessons menu

--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -20,29 +20,35 @@
             Grid.Row="0"
             Grid.Column="0"
             Image="@drawable/profile_logo"/>
+    <Button Text="Lessons"
+            x:Name="SideMenuButton_Lessons"
+            AutomationId="auto_SideMenuButton_Lessons"
+            Style="{StaticResource SideMenuButtons}"
+            Grid.Row="1"
+            Grid.Column="0"/>
     <Button Text="JLPT N5 Module"
             x:Name="SideMenuButton_Quiz"
             AutomationId="auto_SideMenuButton_Quiz"
             Style="{StaticResource SideMenuButtons}"
-            Grid.Row="1"
+            Grid.Row="2"
             Grid.Column="0"
             Image="@drawable/n5_logo"/>
     <Button Text="JLPT N4 Module"
             x:Name="SideMenuButton_QuizN4"
             AutomationId="auto_SideMenuButton_QuizN4"
             Style="{StaticResource SideMenuButtons}"
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.Column="0"
             Image="@drawable/n4_logo"/>
     <Button Text="Settings"
             x:Name="SideMenuButton_Settings"
             Style="{StaticResource SideMenuButtons}"
-            Grid.Row="3"
+            Grid.Row="4"
             Image="@drawable/settings_logo"/>
     <Button Text="About"
             x:Name="SideMenuButton_About"
             Style="{StaticResource SideMenuButtons}"
-            Grid.Row="4"
+            Grid.Row="5"
             Grid.Column="0"
             Image="@drawable/about_logo"/>
   </Grid>
