more lessons added

--- a/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
@@ -4,41 +4,43 @@
              x:Class="Daijoubu.AppPages.ItemsPage"
              Title="Lesson"
              Style="{StaticResource TypicalContentPage}">
-  <StackLayout>
+  <ScrollView>
+    <StackLayout>
 
-    <Frame Style="{StaticResource QuestionCardOuterFrame}">
-      <Frame Style="{StaticResource QuestionCardInnerFrame}">
-        <Label x:Name="label_question"
-             Text="Getting Ready ..."
-             Style="{StaticResource SingleQuestionLabel}" />
+      <Frame Style="{StaticResource QuestionCardOuterFrame}">
+        <Frame Style="{StaticResource QuestionCardInnerFrame}">
+          <Label x:Name="label_question"
+               Text="Getting Ready ..."
+               Style="{StaticResource SingleQuestionLabel}" />
+        </Frame>
       </Frame>
-    </Frame>
 
-    <Frame  x:Name="frame_info"
-            IsVisible="False"
-            Style="{StaticResource QuestionCardOuterFrame}"
-            Margin="15,0,15,15">
-      <Frame Style="{StaticResource QuestionCardInnerFrame}">
-        <Label x:Name="label_info"
-             Text="Getting Ready ..."
-             Style="{StaticResource SingleQuestionLabel}" />
+      <Frame  x:Name="frame_info"
+              IsVisible="False"
+              Style="{StaticResource QuestionCardOuterFrame}"
+              Margin="15,0,15,15">
+        <Frame Style="{StaticResource QuestionCardInnerFrame}">
+          <Label x:Name="label_info"
+               Text="Getting Ready ..."
+               Style="{StaticResource SingleQuestionLabel}"
+               FontSize="Small"/>
+        </Frame>
       </Frame>
-    </Frame>
 
-    <Button x:Name="btn_listen"
-            Text="Listen" />
-    <Button x:Name="btn_meaning"
-            Text="Toggle meaning" />
-    
-    <Grid>
-      <Button x:Name="btn_prev"
-              Text="Prev" 
-              Grid.Column="0"/>
-      <Button x:Name="btn_next"
-              Text="Next"
-              Grid.Column="1"/>
-    </Grid>
-  
-  </StackLayout>
-  
+      <Button x:Name="btn_listen"
+              Text="Listen" />
+      <Button x:Name="btn_meaning"
+              Text="Toggle meaning" />
+
+      <Grid>
+        <Button x:Name="btn_prev"
+                Text="Prev"
+                Grid.Column="0"/>
+        <Button x:Name="btn_next"
+                Text="Next"
+                Grid.Column="1"/>
+      </Grid>
+
+    </StackLayout>
+  </ScrollView>
 </ContentPage>
