--- a/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
@@ -8,61 +8,94 @@
     <StackLayout>
 
       <Frame Style="{StaticResource QuestionCardOuterFrame}">
-        <Frame Style="{StaticResource QuestionCardInnerFrame}">
-          <Label x:Name="label_question"
-               Text="Getting Ready ..."
-               Style="{StaticResource SingleQuestionLabel}" />
-        </Frame>
-        <Button x:Name="btn_listen"
-                Text="Listen" />
+        <StackLayout>
+          <Frame Style="{StaticResource QuestionCardInnerFrame}">
+            <Label x:Name="label_question"
+                 Text="Getting Ready ..."
+                 Style="{StaticResource SingleQuestionLabel}" />
+          </Frame>
+          
+          <!-- 
+          <Frame x:Name="frame_gif"
+                           Style="{StaticResource QuestionCardInnerFrame}">
+            <StackLayout>
+              <Label Text="Gif is here" />
+                <WebView x:Name="webview_gif"
+                         HorizontalOptions="FillAndExpand"
+                         VerticalOptions="FillAndExpand"/>
+                <Label Text="Gif is here" /> 
+            </StackLayout>
+          </Frame>
+          -->
+          <Button x:Name="btn_listen"
+                  Margin="0,10,0,0"
+                  Text="Listen" />
+        </StackLayout>
       </Frame>
+
+      
 
       <Frame  x:Name="frame_info"
               IsVisible="False"
               Style="{StaticResource QuestionCardOuterFrame}"
               Margin="15,0,15,15">
-        <Frame Style="{StaticResource QuestionCardInnerFrame}"
-               x:Name="frame_info_sub">
-          <Label x:Name="label_info_head" />
-          <Label x:Name="label_info"
-               Text="Getting Ready ..."
-               Style="{StaticResource SingleQuestionLabel}"
-               FontSize="Small"/>
-        </Frame>
-        
-        <Frame Style="{StaticResource QuestionCardInnerFrame}"
-               x:Name="frame_info_sub1">
-          <Label x:Name="label_info1_head" />
-          <Label x:Name="label_info1"
-                 IsVisible="False"
-               Text="Getting Ready ..."
-               Style="{StaticResource SingleQuestionLabel}"
-               FontSize="Small"/>
-        </Frame>
-        
-        <Frame Style="{StaticResource QuestionCardInnerFrame}"
-               x:Name="frame_info_sub2">
-          <Label x:Name="label_info2_head" />
-          <Label x:Name="label_info2"
-                 IsVisible="False"
-               Text="Getting Ready ..."
-               Style="{StaticResource SingleQuestionLabel}"
-               FontSize="Small"/>
-        </Frame>
-        
-        <Frame Style="{StaticResource QuestionCardInnerFrame}"
-               x:Name="frame_info_sub3">
-          <Label x:Name="label_info3_head" />
-          <Label x:Name="label_info3"
-                 IsVisible="False"
-               Text="Getting Ready ..."
-               Style="{StaticResource SingleQuestionLabel}"
-               FontSize="Small"/>
-        </Frame>
-        
+        <StackLayout>
+          <!-- ######################################################## -->
+          <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                 Margin="0"
+                 x:Name="frame_info_sub">
+            <StackLayout>
+            <Label x:Name="label_info_head" />
+            <Label x:Name="label_info"
+                 Text="Getting Ready ..."
+                 Style="{StaticResource SingleQuestionLabel}"
+                 FontSize="Small"/>
+            </StackLayout>
+          </Frame>
+          <!-- ######################################################## -->
+          <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                 Margin="0"
+                 x:Name="frame_info_sub1"
+                 IsVisible="False">
+            <StackLayout>
+            <Label x:Name="label_info1_head" />
+            <Label x:Name="label_info1"
+                 Text="Getting Ready ..."
+                 Style="{StaticResource SingleQuestionLabel}"
+                 FontSize="Small"/>
+          </StackLayout>
+          </Frame>
+          <!-- ######################################################## -->
+          <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                 Margin="0"
+                 x:Name="frame_info_sub2"
+                 IsVisible="False">
+            <StackLayout>
+            <Label x:Name="label_info2_head" />
+            <Label x:Name="label_info2"
+                 Text="Getting Ready ..."
+                 Style="{StaticResource SingleQuestionLabel}"
+                 FontSize="Small"/>
+          </StackLayout>
+          </Frame>
+          <!-- ######################################################## -->
+          <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                 Margin="0"
+                 x:Name="frame_info_sub3"
+                 IsVisible="False">
+            <StackLayout>
+            <Label x:Name="label_info3_head" />
+            <Label x:Name="label_info3"
+                 Text="Getting Ready ..."
+                 Style="{StaticResource SingleQuestionLabel}"
+                 FontSize="Small"/>
+            </StackLayout>
+          </Frame>
+          <!-- ######################################################## -->
+        </StackLayout>
       </Frame>
 
-      
+
       <Button x:Name="btn_meaning"
               Text="Show Definition" />
 
