--- a/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ItemsPage.xaml
@@ -11,19 +11,22 @@
 
       <Frame Style="{StaticResource QuestionCardOuterFrame}">
         <StackLayout>
-          <Frame Style="{StaticResource QuestionCardInnerFrame}">
+          <Frame Style="{StaticResource QuestionCardInnerFrame}"
+                 x:Name="frame_question">
             <Label x:Name="label_question"
                  Text="Getting Ready ..."
                  Style="{StaticResource SingleQuestionLabel}" />
           </Frame>
 
           <Frame x:Name="frame_gif"
-               Style="{StaticResource QuestionCardInnerFrame}">
+                  Style="{StaticResource QuestionCardInnerFrame}">
+            <StackLayout>
               <WebView x:Name="webview_gif"
-                       HorizontalOptions="FillAndExpand"
+                       HorizontalOptions="CenterAndExpand"
                        VerticalOptions="FillAndExpand"/>
+            </StackLayout>
           </Frame>
-          
+
           <Button x:Name="btn_listen"
                   Margin="0,10,0,0"
                   Text="Listen" />
